force-app/main/default/objects/PDI_Report__c/PDI_Report__c.object-meta.xml
<CustomObject>
    <label>PDI Report</label>
    <nameField>
        <label>PDI Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PDI Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>