force-app/main/default/objects/PDI_Report__c/fields/Acceptance_Letters_Left_With__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Letters_Left_With__c</fullName>
    <label>Acceptance Letters Left With</label>
    <type>TextArea</type>
</CustomField>