force-app/main/default/objects/PDI_Report__c/fields/Driver_Orientation_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Driver_Orientation_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Driver Orientation Accepted</label>
    <type>Checkbox</type>
</CustomField>