force-app/main/default/objects/PDI_Report__c/fields/Informed_to_Wash_Underside__c.field-meta.xml
<CustomField>
    <fullName>Informed_to_Wash_Underside__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Informed to Wash Underside</label>
    <type>Checkbox</type>
</CustomField>