force-app/main/default/objects/PDI_Report__c/fields/Mechanic_Orientation_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Mechanic_Orientation_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mechanic Orientation Accepted</label>
    <type>Checkbox</type>
</CustomField>