force-app/main/default/objects/PDI_Report__c/fields/Mechanic_Orientation_Class_List__c.field-meta.xml
<CustomField>
    <fullName>Mechanic_Orientation_Class_List__c</fullName>
    <label>Mechanic Orientation Class List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>