force-app/main/default/objects/PDI_Report__c/fields/PDI_Date__c.field-meta.xml
<CustomField>
    <fullName>PDI_Date__c</fullName>
    <label>PDI Date</label>
    <type>Date</type>
</CustomField>