force-app/main/default/objects/PDI_Report__c/recordTypes/In_Process.recordType-meta.xml
<RecordType>
    <fullName>In_Process</fullName>
    <active>true</active>
    <description>FS Rep is preparing report</description>
    <label>In Process</label>
</RecordType>