force-app/main/default/objects/PDI_Report__c/recordTypes/Reviewed.recordType-meta.xml
<RecordType>
    <fullName>Reviewed</fullName>
    <active>true</active>
    <description>Root Cause, Corrective Action &amp; Build Stations have been assigned</description>
    <label>Reviewed</label>
</RecordType>