force-app/main/default/objects/PDI_Report__c/recordTypes/Submitted.recordType-meta.xml
<RecordType>
    <fullName>Submitted</fullName>
    <active>true</active>
    <description>FS Rep has completed the report</description>
    <label>Submitted</label>
</RecordType>